# formal-languages-hw1-2019

./: CMakeLists.txt  README.md  README.md.backup
src/: CMakeLists.txt  console_tester.cpp  main  solver.hpp
testing/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
testing/tests/: test1.cpp  test10.cpp  test11.cpp  test12.cpp  test13.cpp  test14.cpp  test15.cpp  test16.cpp  test17.cpp  test18.cpp  test19.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp  test6.cpp  test7.cpp  test8.cpp  test9.cpp
