cmake_minimum_required(VERSION 3.0)
project(testing)
enable_testing()

# set variables
file(MAKE_DIRECTORY 			"build")
set(SOURCES	 			"../src")
set(COMPILE_FLAGS      			"-g --coverage")
set(OUTPUT             			build)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY 	${OUTPUT})
set(CMAKE_EXE_LINKER_FLAGS 		"-lgcov --coverage")
file(GLOB TESTS				"tests/*.cpp")
add_definitions(${COMPILE_FLAGS})

# include library
include_directories(${SOURCES})
include_directories(${PROJECT_SOURCE_DIR})

# compile
add_executable("test1"		"tests/test1.cpp")
add_executable("test2"		"tests/test2.cpp")
add_executable("test3"		"tests/test3.cpp")
add_executable("test4"		"tests/test4.cpp")
add_executable("test5"		"tests/test5.cpp")
add_executable("test6"		"tests/test6.cpp")
add_executable("test7"		"tests/test7.cpp")
add_executable("test8"		"tests/test8.cpp")
add_executable("test9"		"tests/test9.cpp")
add_executable("test10"		"tests/test10.cpp")
add_executable("test11"		"tests/test11.cpp")
add_executable("test12"		"tests/test12.cpp")
add_executable("test13"		"tests/test13.cpp")
add_executable("test14"		"tests/test14.cpp")
add_executable("test15"		"tests/test15.cpp")
add_executable("test16"		"tests/test16.cpp")
add_executable("test17"		"tests/test17.cpp")
add_executable("test18"		"tests/test18.cpp")
add_executable("test19"		"tests/test19.cpp")

# add tests
add_test("test_num_1"	"./build/test1")
add_test("test_num_2"	"./build/test2")
add_test("test_num_3"	"./build/test3")
add_test("test_num_4"	"./build/test4")
add_test("test_num_5"	"./build/test5")
add_test("test_num_6"	"./build/test6")
add_test("test_num_7"	"./build/test7")
add_test("test_num_8"	"./build/test8")
add_test("test_num_9"	"./build/test9")
add_test("test_num_10"	"./build/test10")
add_test("test_num_11"	"./build/test11")
add_test("test_num_12"	"./build/test12")
add_test("test_num_13"	"./build/test13")
add_test("test_num_14"	"./build/test14")
add_test("test_num_15"	"./build/test15")
add_test("test_num_16"	"./build/test16")
add_test("test_num_17"	"./build/test17")
add_test("test_num_18"	"./build/test18")
add_test("test_num_19"	"./build/test19")


